--- a/blog/templates/filter_by_tags.html
+++ b/blog/templates/filter_by_tags.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    <div class="row">
-        <div class="col-lg-12">
-            <h1>Check out our posts!</h1>
-        </div>
-    </div>
-
     {% for post in posts %}
-        <div class="row">
+    <div class="row">
             <div class="col-md-12">
                 <h3>{{ post.title }}</h3>
                 <div>by {{ post.author }} on {{ post.created }}</div>
                 <a href="{% url "post" post.pk %}">Read it!</a>
             </div>
         </div>
+
+    <br>
+
+    <div class="row">
+        <div class="col-md-4">
+            {% for tag in post.tags.all %}
+                <span class="label label-info">{{ tag.name }}</span>
+            {% endfor %}
+        </div>
+    </div>
     {% endfor %}
+
 {% endblock main %}
